force-app/main/default/objects/HI_BoR_Transfer__c/HI_BoR_Transfer__c.object-meta.xml
<CustomObject>
    <label>HI BoR Transfer</label>
    <nameField>
        <displayFormat>BT-{0000}</displayFormat>
        <label>HI BoR Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HI BoR Transfers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>