force-app/main/default/objects/HI_BoR_Transfer__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Information</label>
    <length>124000</length>
    <type>LongTextArea</type>
</CustomField>