force-app/main/default/objects/HI_BoR_Transfer__c/fields/Authorized_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorized Date</label>
    <type>Date</type>
</CustomField>