force-app/main/default/objects/HI_BoR_Transfer__c/fields/Benefit_Types__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Types__c</fullName>
    <label>Benefit Types</label>
    <length>124000</length>
    <type>LongTextArea</type>
</CustomField>