force-app/main/default/objects/HI_BoR_Transfer__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Blocked Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>