force-app/main/default/objects/HI_BoR_Transfer__c/fields/Expected_Eta__c.field-meta.xml
<CustomField>
    <fullName>Expected_Eta__c</fullName>
    <label>Expected Eta</label>
    <type>Date</type>
</CustomField>